# bare-metal-manager-core

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  STYLE_GUIDE.md  devspace.yaml  rustfmt.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  documentation-request.md  documentation_request_correction.yml  documentation_request_new.yml  feature_request.md  feature_request_form.yml  submit-question.md
.github/workflows/: ci.yaml  docs.yml  fern-docs-ci.yml  fern-docs-preview-build.yml  fern-docs-preview-comment.yml  publish-fern-docs.yml  sync-openapi.yml
bluefield/: Makefile.toml
bluefield/charts/carbide-dhcp-server/: values.yaml
bluefield/charts/carbide-dpu-agent/: values.yaml
bluefield/charts/carbide-fmds/: Chart.yaml  values.yaml
bluefield/containers/carbide-fmds/: Dockerfile
bluefield/containers/forge-dhcp-server/: Dockerfile
bluefield/containers/forge-dpu-agent/: Dockerfile
bluefield/containers/forge-dpu-otel-agent/: Dockerfile
bluefield/containers/otelcol-contrib/: Dockerfile
bluefield/misc/DEBIAN/: postinst
bluefield/otel/: otelcol-wrapper-imports
book/: book.toml
book/src/: README.md  SUMMARY.md  bootable_artifacts.md  codebase_overview.md  development.md  faq.md  glossary.md  release-notes.md
book/src/architecture/: dpu_configuration.md  health_aggregation.md  key_group_sync.md  networking_integrations.md  overview.md  redfish_workflow.md  state_handling.md
book/src/development/: vm_pxe_client.md  vscode_remote.md
book/src/manuals/: breakfix_integration.md  building_nico_containers.md  ingesting_machines.md  machine_validation.md  nvlink_partitioning.md  removing_machines.md  site-reference-arch.md  site-setup.md  sku_validation.md
book/src/playbooks/: force_delete.md  ib_runbook.md  machine_reboot.md  troubleshooting_noDpuLogsWarning_alerts.md
crates/admin-cli/src/: main.rs  metadata.rs  rpc.rs
crates/agent/: Cargo.toml
crates/agent/src/: acl.rs  acl_rules.rs  command_line.rs  dhcp.rs  dhcp_server_grpc_client.rs  ethernet_virtualization.rs  (+6 more)
crates/api/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-model/: Cargo.toml
crates/bmc-explorer/: Cargo.toml
crates/dhcp/: build.rs
crates/dpf/: Cargo.toml  Makefile.toml  README.md
crates/firmware/: README.md
crates/fmds/: Cargo.toml  build.rs
crates/fmds/src/: cfg.rs  grpc_server.rs  lib.rs  main.rs  phone_home.rs  rest_server.rs  state.rs
crates/ipxe-renderer/: Cargo.toml  README.md  templates.yaml
crates/libmlx/: build.rs
crates/machine-validation/: Cargo.toml
crates/nvlink-manager/: Cargo.toml
crates/nvlink-manager/src/: config.rs  errors.rs  lib.rs  metrics.rs  nvlink.rs
crates/postgres-smoke-test/: Cargo.toml
crates/postgres-smoke-test/tests/: postgres_connection.rs
crates/rpc/: build.rs
crates/scout/: Cargo.toml
crates/scout/src/: firmware_upgrade.rs  main.rs  mlx_device.rs
crates/secrets/: Cargo.toml
crates/site-explorer/: Cargo.toml
crates/site-explorer/src/: bmc_endpoint_explorer.rs  endpoint_explorer.rs  lib.rs  metrics.rs  redfish.rs
crates/sqlx-query-tracing/: Cargo.toml
crates/ssh/: Cargo.toml
crates/ssh-console/: Cargo.toml  README.md
crates/ssh-console-mock-api-server/: build.rs
crates/ssh/src/: ssh.rs
crates/state-controller/: Cargo.toml
crates/state-controller/src/: controller.rs  db_write_batch.rs  io.rs  lib.rs  metrics.rs  state_change_emitter.rs  state_handler.rs  tests.rs
crates/state-controller/src/controller/: builder.rs  db.rs  enqueuer.rs  periodic_enqueuer.rs  processor.rs
crates/utils/: Cargo.toml
deploy/: DNS.md  README.md
dev/docker/: Dockerfile.build-artifacts-container-aarch64  Dockerfile.cargo-docker-minimal  Dockerfile.release-container-sa-x86_64
dev/mac-local-dev/: README.md  carbide-api-config.toml  run-carbide-admin-cli.sh  run-carbide-api.sh
dev/webdev-env/: run-env.sh
docs/: README.md  bootable_artifacts.md  codebase_overview.md  components.md  development.md  dpu-operations.md  faq.md  glossary.md  index.yml  release-notes.md
docs/architecture/: health_aggregation.md  key_group_sync.md  networking_integrations.md  overview.md  redfish_workflow.md
docs/development/: issuer_ca_recreate.md  new_hardware_support.md  vm_pxe_client.md  vscode_remote.md
docs/kubernetes/: tls.md
docs/manuals/: breakfix_integration.md  building_nico_containers.md  cargo-via-docker-macos.md  expected_machine_update.md  ingesting_machines.md  machine_validation.md  networking_requirements.md  nvlink_partitioning.md  site-reference-arch.md  site-setup.md  sku_validation.md
docs/openapi/: spec.yaml
docs/playbooks/: carbide_web_oauth2.md  force_delete.md  ib_runbook.md  machine_reboot.md  troubleshooting_noDpuLogsWarning_alerts.md
docs/static/: carbide-core.drawio  site-controller.drawio
fern/: .gitignore  docs.yml  fern.config.json  generators.yml
fern/components/: BadgeLinks.tsx  CustomFooter.tsx
helm/: Chart.yaml  PREREQUISITES.md  README.md
helm-prereqs/: Chart.yaml  README.md  SETUP_PHASES.md  bootstrap_ssh_host_key.sh  clean.sh  helmfile.yaml  preflight.sh  setup.sh  unseal_vault.sh  values.yaml
helm-prereqs/keycloak/: README.md  clean.sh  deployment.yaml  example.sh  get-token.sh  realm-configmap.yaml  service.yaml  setup.sh
helm-prereqs/operators/: nodelocaldns-daemonset.yaml  storageclass-local-path-persistent.yaml
helm-prereqs/templates/: NOTES.txt  _helpers.tpl  cert-manager-vault-sa.yaml  configmaps.yaml  eso-external-secrets.yaml  eso-secretstores.yaml  namespace.yaml  postgresql.yaml  pull-secrets.yaml  secrets.yaml  site-root-certificate.yaml  ssh-keygen-job.yaml  vault-config-job.yaml  vault-forge-issuer.yaml  vault-tls-certs.yaml
helm-prereqs/values/: carbide-prereqs-dynamic.yaml.gotmpl  metallb-config.yaml  ncx-core.yaml  ncx-rest.yaml  ncx-site-agent.yaml
helm/examples/: values-full.yaml
pxe/: Makefile.toml  wget_deb_urls
pxe/common_files/: check-scout-updates.sh
pxe/templates/: bmc_fw_update  user-data
pxe/test_data/: agent_config_external.toml
(+964 files in other folders)
