#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-fmds"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "fmds"

[[bin]]
name = "carbide-fmds"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-dpu-agent-utils = { path = "../dpu-agent-utils" }
carbide-rpc = { path = "../rpc" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-version = { path = "../version" }

arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-server = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["client-legacy"] }
uuid = { features = ["v4"], workspace = true }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
