#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Minimal crate to verify Postgres connectivity when running tests via
# cargo-docker-minimal (e.g. DATABASE_URL and host.docker.internal work).
# Run: cargo make cargo-docker-minimal -- test -p postgres-smoke-test
# (Set DATABASE_URL with host.docker.internal for the host so the container can reach Postgres.)
#
[package]
name = "postgres-smoke-test"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
tokio = { workspace = true, features = ["rt", "macros"] }
