#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-scout"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "scout"

[[bin]]
# TODO: rename to carbide-scout
name = "forge-scout"
path = "src/main.rs"

[dependencies]

# [local-dependencies]
carbide-rpc = { path = "../rpc" }
carbide-host-support = { path = "../host-support" }
carbide-tls = { path = "../tls" }
carbide-uuid = { path = "../uuid" }
carbide-version = { path = "../version" }
carbide-utils = { path = "../utils" }
carbide-machine-validation = { path = "../machine-validation" }
carbide-libmlx = { path = "../libmlx" }

chrono = { workspace = true }
clap = { workspace = true }
eyre = { workspace = true }
efivar = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
pwhash = { workspace = true }
regex = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
smbios-lib = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tryhard = { workspace = true }
tss-esapi = { workspace = true }
uname = { workspace = true }
uuid = { workspace = true }
reqwest = { default-features = false, features = [
  "rustls-tls",
  "stream",
], workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
prost-types = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
axum = { workspace = true }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
